[project]
name = "git-hub-ai-pr-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "pydantic-settings>=2.14.1",
    "qstash>=3.4.0",
    "uvicorn>=0.49.0",
]
